--- a/index.html
+++ b/index.html
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Reto Grid</title>
-</head>
-<body>
-    <div class="grid-div">
-        <div class="header"></div>
-        <div class="navigation"></div>
-        
+    <link rel="stylesheet" href="./estilos.css" />
+  </head>
+
+  <body>
+    <div class="container">
+      <div class="header">Header</div>
+      <div class="navigation">Navigation</div>
+      <div class="aside">Aside</div>
+      <div class="content">Content</div>
+      <div class="section">Section</div>
+      <div class="footer">Footer</div>
     </div>
-</body>
+  </body>
 </html>
